# extractXMLeRechnung_new

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.simple  LICENSE  README.md  docker-compose.yml  nginx-simple.conf.example
.github/workflows/: ci.yml
config/: default.yml  production.yml
docs/: API.md  DEVELOPMENT.md
examples/: client_example.py  curl_example.sh
scripts/: docker-setup.sh
src/: errors.rs  extract_xml.rs  handlers.rs  lib.rs  main.rs  models.rs  pdf.rs  pdf_worker.rs  service.rs
tests/: integration_tests.rs
